# miniprogram-faceoff

./: README.md
face-off/: Cargo.toml  build.cmd  build.rs  replace.js
face-off/.cargo/: config
face-off/src/: affine.rs  definitions.rs  detector.rs  face_off.rs  histogram.rs  image_proc.rs  imgtool.rs  library.c  main.rs  utils.rs
miniprogram/: app.js  app.json  app.wxss  project.config.json
miniprogram/cloudfunctions/imgSecCheck/: index.js  package-lock.json
miniprogram/faceoff/pages/index/: face-off.js  index.js  index.wxml  index.wxss
miniprogram/pages/index/: index.js  index.wxml  index.wxss
miniprogram/utils/: face_detect_helper.js  load_images.js
rustface/: Cargo.toml
rustface/src/: lib.rs
rustface/src/classifier/: surf_mlp_classifier.rs
rustface/src/common/: mod.rs
rustface/src/feat/: surf_mlp_featmap.rs
