[package]
name = "face-off"
version = "0.7.0"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
image = "0.23.1"

[target.'cfg(any(target_arch = "asmjs", target_arch = "wasm32"))'.dependencies]

[target.'cfg(any(target_arch = "asmjs", target_arch = "wasm32"))'.dependencies.image]
version = "0.23.1"
default-features = false
features  = []

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
panic = 'abort'

[build-dependencies]
cc = "1.0.50"